Fix overflowing text in collapsed sidebar menu
- CSS now truncates text and appends an ellipsis if it is too wide
- A title attribute is added to those menu items, so the truncated text
  is visible in full when hovering over it

Fixes #33651

--- a/css/ace-mantis.css
+++ b/css/ace-mantis.css
@@ -704,6 +704,13 @@ ul.changelog > li, ul.roadmap > li {
         margin-left: 43px !important;
     }
 
+    .sidebar.menu-min .nav-list > li > a > .menu-text {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        padding-right: 8px;
+    }
+
     .sidebar.compact, .sidebar.compact.navbar-collapse {
         width: 125px;
     }
